--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,17 +10,17 @@
     <title>Virtual Diary</title>
     <meta
       name="description"
-      content="Start your journaling journey with DayBook, where your memories are secure, personal, and always accessible"
+      content="Start your journaling journey with Virtual Diary , where your memories are secure, personal, and always accessible"
     />
     <meta name="theme-color" content="#15191E" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="DayBook - Organize Your Thoughts, Track Your Progress"
+      content="Virtual Diary - Organize Your Thoughts, Track Your Progress"
     />
     <meta
       property="og:description"
-      content="Start your journaling journey with DayBook, where your memories are secure, personal, and always accessible"
+      content="Start your journaling journey with Virtual Diary, where your memories are secure, personal, and always accessible"
     />
     <meta
       property="og:image"
@@ -29,11 +29,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="DayBook - Organize Your Thoughts, Track Your Progress"
+      content="Virtual Diary - Organize Your Thoughts, Track Your Progress"
     />
     <meta
       name="twitter:description"
-      content="Start your journaling journey with DayBook, where your memories are secure, personal, and always accessible"
+      content="Start your journaling journey with Virtual Diary, where your memories are secure, personal, and always accessible"
     />
     <meta
       name="twitter:image"
